@@ -1,3 +1,8 @@
+2007-07-02  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots): Initialize
+	start_token to 0 to quiet bogus compiler warnings.
+
 2007-06-30  Timothee Lecomte  <timothee.lecomte@ens.fr>
 
 	* src/help.c (OutLine_InternalPager): Fix compilation when PIPES is not
